--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -83,12 +83,11 @@
                 Register
               </button>
             </div>
-        
           </form>
         </article>
 
-        <div class="border-top card-body text-center" routerLink="/login">
-          Have an account? <a href="">Log In</a>
+        <div class="border-top card-body text-center">
+          Have an account? <a routerLink="/login">Log In</a>
         </div>
       </div>
     </div>
