--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -53,11 +53,8 @@
               Login
             </button>
           </div>
-          <div
-            class="border-top card-body text-center mt-2"
-            routerLink="/register"
-          >
-            Don't Have an account? <a href="">Sign Up</a>
+          <div class="border-top card-body text-center mt-2">
+            Don't Have an account? <a routerLink="/register">Sign Up</a>
           </div>
         </form>
       </div>
