--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,4 @@
 <h1>This is a home page</h1>
+<p>Implemented <span>Auth guard.</span></p>
+<p>You can not view the Product Page without <a routerLink="/login">Log in</a></p>
+<p></p>
